Bitcoin reporter is now comparable with jdk 1.7. wildcard imports have been removed. Now you can pass in start and ending blocks. (add reporter Bitcoin start=<start> end=<end>)